--- a/1. FinalProject_Code_2310691.ipynb
+++ b/1. FinalProject_Code_2310691.ipynb
@@ -5,7 +5,7 @@
    "id": "c12812c5",
    "metadata": {},
    "source": [
-    "# MA366: AI and Machine Learning Assignment"
+    "# CREDIT CARD DEFAULT PREDICTION"
    ]
   },
   {
