--- a/1. FinalProject_Code_2310691.ipynb
+++ b/1. FinalProject_Code_2310691.ipynb
@@ -13,7 +13,7 @@
    "id": "a5f26e27",
    "metadata": {},
    "source": [
-    "Name: Syed Muhammad Maisam ; Registration Number: 2310691 ; Email: sm23587@essex.ac.uk"
+    "Name: Syed Muhammad Maisam"
    ]
   },
   {
