--- a/credit_default_code.ipynb
+++ b/credit_default_code.ipynb
@@ -5,7 +5,7 @@
    "id": "c12812c5",
    "metadata": {},
    "source": [
-    "# MA366: AI and Machine Learning Assignment"
+    "# CREDIT CARD DEFAULT PREDICTION"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "a5f26e27",
    "metadata": {},
    "source": [
-    "Name: Syed Muhammad Maisam ; Registration Number: 2310691 ; Email: sm23587@essex.ac.uk"
+    "Name: Syed Muhammad Maisam"
    ]
   },
   {
